<resources>
    <string name="app_name">8OSON</string>
    <string name="connection_vaild_msg">Connection successfully</string>
    <string name="connection_invaild_msg">Connection Faild</string>
    <string name="authForgetPassword"> فقد كلمه المرور ؟</string>
    <string name="authLogin">تسجيل الدخول</string>
    <string name="authFacebook">تسجيل عبر الفيس  بوك</string>
    <string name="authSignUp">انشاء حساب</string>
    <string name="authEmailOrPhone">رقم الهاتف</string>
    <string name="emptyData">من فضلك ادخل جميع البيانات</string>
    <string name="authPassword">كلمه المرور</string>
    <string name="signUpName">الاسم</string>
    <string name="signUpEmail">البريد الالكتروني</string>
    <string name="SignUpPhone">الهاتف</string>
    <string name="terms">الشروط والاحكام</string>
    <string name="authEmailSendCode">ارسال الكود</string>
    <string name="authSubmitCode">تاكيد</string>
    <string name="confirmText">كود التأكيد</string>
    <string name="authNewPassword">رقم سري جديد</string>
    <string name="authConfirmPassword">تاكيد الرقم السري</string>
    <string name="newPasswordText">تعين كلمة مرور جديده</string>
    <string name="authResetPassword">تأكيد كلمه المرور</string>
    <string name="homeTitle">الرئيسيه</string>
    <string name="stores">المتاجر</string>
    <string name="myOrders">طلباتى</string>
    <string name="mynotifications">الأشعارات</string>
    <string name="profile">أنا</string>
    <string name="tabAllText">الكل</string>
    <string name="tabActiveStoresText">متاجر نشطة</string>
    <string name="tabNearestStoresText">متاجر قريبة</string>

    <string name="myOrdersTitle">طلباتي</string>
    <string name="orderTypesHint">اختر نوع الطلب</string>
    <string name="placeHolder">placeHolder</string>

    <string name="myNotificationsTitle">الاشعارات</string>
    <string name="profileBalance">رصيد حساب</string>
    <string name="profileOrdersNum">عدد الطلبات</string>
    <string name="profileComments">تعليقات العملاء</string>
    <string name="Comments">تعليقات  </string>
    <string name="profileSettings">الاعدادت</string>
    <string name="profileExit">تسجيل الخروج</string>
    <string name="profileRiyal">رس</string>

    <string name="settingsStores">متاجر قمت بالتسجيل بها</string>
    <string name="settingsEditProfile">تعديل البروفايل</string>
    <string name="settingsPolicy">شروط الاستخدام</string>
    <string name="settingsTerms">سياسه الاستخدام</string>
    <string name="settingsRateApp">قيم التطبيق</string>
    <string name="settingsHowTo">كيف اعمل في غصن</string>
    <string name="editProfileName">اسمك بالكامل</string>
    <string name="editProfileBirthday">سنه الميلاد</string>
    <string name="editProfilePhone">رقم الهاتف</string>
    <string name="editProfileEmail">الايميل</string>
    <string name="editProfileGender">الجنس</string>
    <string name="editProfileSave">حفظ</string>
    <string name="editProfileMale">ذكر</string>
    <string name="editProfileFemale">انثى</string>
    <string name="mandopSignUp">سجلنى كمندوب</string>
    <string name="today">اليوم</string>
    <string name="allDay">طول اليوم</string>
    <string name="orderText">مكان التسليم</string>
    <string name="orderAddress">اختر عنوان التوصيل</string>
    <string name="orderTimeText">وقت التوصيل</string>
    <string name="orderTime">اختر وقت التوصيل</string>
    <string name="orderDetailsHint">اكتب هنا تفاصيل طلبك من المطعم ونرجو منك كتابة القيمه التقديريه للطلب</string>
    <string name="tabWaitingOrders">طلبات في الانتظار</string>
    <string name="tabStoreDetails">معلومات المتجر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendBill">اصدار الفاتوره</string>
    <string name="orderReject">رفض</string>
    <string name="orderAccept">موافقه</string>
    <string name="sendMessagehint">اكتب رساله</string>
    <string name="orderDetail">تفاصيل الطلب</string>
    <string name="ordertotal">200</string>
    <string name="orderDesc">وصف الطلب</string>
    <string name="mandopDetials">بيانات المنـدوب</string>
    <string name="chat">محادثه</string>
    <string name="call">اتصال</string>
    <string name="tabOrdersDelivered">توصيل</string>
    <string name="tabMyOrders">طلباتي</string>
    <string name="shopText">بيانات المتجر</string>
    <string name="userDataText">بيانات المستخدم</string>
    <string name="addPriceText">اضافه التكلفه</string>
    <string name="sendPriceText">ارسال التكلفه</string>
    <string name="addressText">العنواين</string>
    <string name="notMatchedPasswords">كلمتي السر غير متطابقه</string>
    <string name="emptyList">لا يوجد متاجر</string>
    <string name="emptyOrders">لا يوجد طلبات</string>
    <string name="logOut">هل تريد الخروج ؟</string>
    <string name="yesText">نعم</string>
    <string name="noText">لا</string>
    <string name="getLocationText">تاكيد</string>
    <string name="pickLocationSuccess">تم اختيار العنوان بنجاح</string>
    <string name="orderdate">اختر ميعاد التوصيل</string>
    <string name="deliverTime">زمن التوصيل</string>
    <string name="orderEnd">منتهيه</string>
    <string name="orderActive">نشطه</string>
    <string name="orderWaiting">في الانتظار</string>
    <string name="marketHint">........</string>
    <string name="emptyNotfications">لا يوجد اشعارات</string>
    <!--FACEBOOK INTEGRATION-->
    <string name="facebook_app_id">2339823899611257</string>
    <string name="fb_login_protocol_scheme">fb2339823899611257</string>
    <string name="sendOrderImage">صوره الطلب</string>
    <string name="sendOrderImageDesc">اصدر صوره الطلب للعميل بعد استلامه</string>
    <string name="sendBillDesc">اصدر فاتوره للعميل بعد الطلب</string>
    <string name="orderCompleteDesc">عند الوصول للعميل اضغط علي زر الطلب</string>
    <string name="orderComplete">تسليم الطلب</string>
</resources>
