<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="app.grand.a8oson.viewModels.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shared_logo_item" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp16w"
                android:layout_marginStart="@dimen/dp16w"
                android:gravity="start"
                android:padding="@dimen/dp4h"
                android:text="@string/authLogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <app.grand.a8oson.base.CustomEditText
                android:id="@+id/authEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8h"
                android:background="@drawable/rounded_shape"
                android:gravity="center_horizontal"
                android:hint="@string/authEmailOrPhone"
                android:inputType="phone"
                android:padding="@dimen/dp8h"
                android:text="@={loginViewModel.loginRequest.mobile}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <app.grand.a8oson.base.CustomEditText
                android:id="@+id/authPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8h"
                android:background="@drawable/rounded_shape"
                android:gravity="center_horizontal"
                android:hint="@string/authPassword"
                android:inputType="textPassword"
                android:padding="@dimen/dp8h"
                android:text="@={loginViewModel.loginRequest.password}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp16w"
                android:layout_marginStart="@dimen/dp16w"
                android:gravity="end"
                android:onClick="@{() -> loginViewModel.goForget()}"
                android:padding="@dimen/dp4h"
                android:text="@string/authForgetPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:background="@drawable/corner_view"
                android:onClick="@{() -> loginViewModel.goLogin()}"
                android:text="@string/authLogin"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginFaceBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:background="@drawable/rounded_shape"
                android:onClick="@{() -> loginViewModel.goFacebook()}"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:com_facebook_login_text="@string/authFacebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:gravity="center_horizontal"
                android:onClick="@{() -> loginViewModel.getRegister()}"
                android:padding="@dimen/dp8h"
                android:text="@string/authSignUp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</layout>