<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <data>

        <variable
            name="forgetPasswordViewModel"
            type="app.grand.a8oson.viewModels.ForgetPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:orientation="vertical">

            <include layout="@layout/shared_logo_item" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/dp20h"
                android:text="@string/authForgetPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark" />


            <app.grand.a8oson.base.CustomEditText
                android:id="@+id/authEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp15h"
                android:background="@drawable/rounded_shape"
                android:gravity="center_horizontal"
                android:hint="@string/authEmailOrPhone"
                android:inputType="phone"
                android:padding="@dimen/dp8h"
                android:text="@={forgetPasswordViewModel.verifyRequest.mobile}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp15h"
                android:background="@drawable/corner_view"
                android:onClick="@{() -> forgetPasswordViewModel.sendCode()}"
                android:text="@string/authEmailSendCode"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</layout>