<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white">

    <data>

        <variable
            name="forgetPasswordViewModel"
            type="app.grand.a8oson.viewModels.ForgetPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">



            <include layout="@layout/shared_logo_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/dp25h"
                android:text="@string/newPasswordText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <app.grand.a8oson.base.CustomEditText
                android:id="@+id/authNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp12h"
                android:layout_marginStart="@dimen/dp12h"
                android:background="@drawable/rounded_shape"
                android:gravity="center_horizontal"
                android:hint="@string/authNewPassword"
                android:inputType="textPassword"
                android:padding="@dimen/dp8h"
                android:text="@={forgetPasswordViewModel.verifyRequest.new_password}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"

                android:textStyle="bold" />


            <app.grand.a8oson.base.CustomEditText
                android:id="@+id/authConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp12h"
                android:layout_marginStart="@dimen/dp12h"
                android:background="@drawable/rounded_shape"
                android:gravity="center_horizontal"
                android:hint="@string/authConfirmPassword"
                android:inputType="textPassword"
                android:padding="@dimen/dp8h"
                android:text="@={forgetPasswordViewModel.verifyRequest.new_confirm_password}"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"

                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp8h"
                android:layout_marginStart="@dimen/dp8h"
                android:layout_marginTop="@dimen/dp40h"
                android:background="@drawable/corner_view"
                android:onClick="@{() -> forgetPasswordViewModel.changePassword()}"
                android:text="@string/authResetPassword"
                android:textAllCaps="false"

                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</layout>